[gd_scene load_steps=8 format=2]

[ext_resource path="res://ativos/imagens/tela_inicio_fundo.png" type="Texture" id=1]
[ext_resource path="res://ativos/imagens/castelo_tela_fases.png" type="Texture" id=2]
[ext_resource path="res://ativos/imagens/icone_fases_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://telas/script_cena_fases.gd" type="Script" id=4]
[ext_resource path="res://ativos/megaman_2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ativos/sons/selecionando_fase.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.478431, 0.623529, 0.882353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 960.06, 540.02 )
texture = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CasteloFases" type="Sprite" parent="."]
position = Vector2( 501.433, 168.069 )
texture = ExtResource( 2 )
centered = false

[node name="Fase01" type="Sprite" parent="."]
position = Vector2( 626.434, 672.544 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 107, 1, 51, 25 )

[node name="Fase02" type="Sprite" parent="."]
position = Vector2( 970.397, 674.963 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 107, 1, 51, 25 )

[node name="Fase03" type="Sprite" parent="."]
position = Vector2( 1313.45, 672.558 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 107, 1, 51, 25 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 0.960784, 0, 1 )
margin_left = 500.685
margin_top = 32.0724
margin_right = 1462.69
margin_bottom = 140.072
custom_fonts/normal_font = SubResource( 1 )
text = "MAPA DE FASES"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
